ai: revise and simplify instruction files